2008-05-17  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyCache.cs: Load debugging symbols when caching an assembly.

2008-05-10  Sebastien Pouliot  <sebastien@ximian.com>

	* TestRunner.cs: Move from Gendarme.Framework.dll. Change namespace.
	Allow the runner to work with rules that works across several 
	assemblies (i.e. populate Assemblies collection)

2008-04-11  Sebastien Pouliot  <sebastien@ximian.com>

	* DefinitionLoader.cs: Rework GetMethodDefinition so it can work
	on constructors too.

2008-04-03  Daniel Abramov  <ex@vingrad.ru>

	* DefinitionLoader.cs: DefinitionLoader made public because
	it seems to be useful for other test assemblies.

2008-03-11  Daniel Abramov  <ex@vingrad.ru>

	* AssemblyCache.cs: New.
	* DefinitionLoader.cs: New.